syntax = "proto3";

package monad_proto.voting;

message ProtoVoteInfo {
  bytes id = 1;
  uint64 round = 2;
  bytes parent_id = 3;
  uint64 parent_round = 4;
}
